--- a/pagina1.html
+++ b/pagina1.html
@@ -4,6 +4,8 @@
 	<title>Actividad 1</title>
 </head>
 <body>
-pagina de prueba para la actividad 1 del curso Diseño de sitios web.
+<h1>Curso: Diseño de sitios web</h1>
+<h2>Actividad 1</h2>
+<p>Pagina de prueba</p>
 </body>
 </html>
